<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/toolbarFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/toolbar_color"
        >
        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dashboard"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="52dp"
            />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarFrame"
        android:background="@drawable/sheet"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nestedConsLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/gm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gm"
                android:textColor="@color/faint_text"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dummy_name"
                android:textColor="@color/original_text"
                android:textStyle="bold"
                android:textSize="@dimen/heading_text_size"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gm"
                android:drawableRight="@drawable/hand_waving"
                android:drawablePadding="8dp"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userName"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />

            <LinearLayout
                android:id="@+id/layCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineChart"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                >
                
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="4dp"
                    android:layout_weight="1"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/pointer"
                            android:layout_margin="12dp"
                            />
                        <TextView
                            android:id="@+id/todaysClick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/original_text"
                            android:textSize="@dimen/large_text_size"
                            android:text="123"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/faint_text"
                            android:textSize="@dimen/medium_text_size"
                            android:text="@string/today_s_clicks"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="4dp"
                    android:layout_weight="1"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/location"
                            android:layout_margin="12dp"
                            />
                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/original_text"
                            android:textSize="@dimen/large_text_size"
                            android:text="Pune"
                            android:lines="1"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/faint_text"
                            android:textSize="@dimen/medium_text_size"
                            android:text="@string/txt_top_loc"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="4dp"
                    android:layout_weight="1"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/internet"
                            android:layout_margin="12dp"
                            />
                        <TextView
                            android:id="@+id/socialMedia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/original_text"
                            android:textSize="@dimen/large_text_size"
                            android:text="Instagram"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="12dp"
                            android:textColor="@color/faint_text"
                            android:textSize="@dimen/medium_text_size"
                            android:text="@string/top_src"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/viewAnalyticsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layCards">
                <TextView
                    android:id="@+id/viewAnalytics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="@color/original_text"
                    android:textSize="@dimen/large_text_size"
                    android:text="@string/txt_view_analysis"
                    android:drawableStart="@drawable/price_boost"
                    android:drawablePadding="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/layTabsAndSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewAnalyticsCard"
                android:weightSum="10"
                >
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:backgroundTint="@color/transparent"
                    app:tabIndicatorGravity="stretch"
                    app:tabIndicatorAnimationMode="elastic"
                    app:tabIndicator="@drawable/back_select"
                    app:tabIndicatorColor="@null"
                    app:tabTextColor="@color/faint_text"
                    app:tabSelectedTextColor="@color/white"
                    app:tabGravity="start"
                    app:tabMode="scrollable"
                    android:layout_weight="9.5"
                    />
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/search"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layTabsAndSearch"
                android:layout_margin="12dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/viewLinksCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pager">
                <TextView
                    android:id="@+id/viewLinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="@color/original_text"
                    android:textSize="@dimen/large_text_size"
                    android:text="@string/txt_view_all_links"
                    android:drawableStart="@drawable/link_anchor"
                    android:drawablePadding="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/whatsappCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="4dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingTop="10dp"
                app:cardBackgroundColor="@color/whatsapp_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLinksCard">
                <TextView
                    android:id="@+id/whatsappText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="@color/original_text"
                    android:textSize="@dimen/large_text_size"
                    android:text="@string/txt_talk"
                    android:drawableStart="@drawable/whatsapp"
                    android:drawablePadding="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/faqCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="4dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingTop="10dp"
                app:cardBackgroundColor="@color/faq_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/whatsappCard"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/viewFaq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColor="@color/original_text"
                    android:textSize="@dimen/large_text_size"
                    android:text="@string/txt_faq"
                    android:drawableStart="@drawable/question_mark"
                    android:drawablePadding="18dp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>